@@ -23,6 +23,7 @@ Changes in 4.2:
 - Remove obsolete config options of datacheck during upload feature
 - Improve error display of syndication plugin errors (280814)
 - Remove multiple views support (281675)
+- Relabel Change Tracker button into Switch Tracker to avoid user confusion (282951)
 
 Changes in 4.1.3:
 - Fix statusbar hiding and showing not working (281674)
